Fix sidebar overflow background color (#181)

--- a/packages/frontend/src/layouts/SidebarLayout/SidebarLayout.module.css
+++ b/packages/frontend/src/layouts/SidebarLayout/SidebarLayout.module.css
@@ -9,6 +9,6 @@
 }
 
 .content {
-  height: fit-content;
+  background-color: white;
   flex: 1;
 }
